--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,41 @@
+:root {
+    --ff-serif: "Bellefair", serif;
+    --ff-sans-cond: "Barlow Condensed", sans-serif;
+    --ff-sans-normal: "Barlow", sans-serif;
+}
+
 body {
     background-image: url('../assets/home/background-home-desktop.jpg');
+    font-family: var(--ff-sans-normal) !important;
+}
+
+@media (max-width: 991px) {
+    body {
+        background-image: url('../assets/home/background-home-tablet.jpg');
+        background-size: cover;
+    }
+}
+
+
+@media (max-width: 667px) {
+    body {
+        background-image: url('../assets/home/background-home-mobile.jpg');
+        background-size: cover;
+    }
+}
+
+li {
+    list-style-type: none;
+    cursor: pointer;
+}
+
+li a {
+    text-transform: uppercase !important;
+    letter-spacing: 2px;
+}
+
+.container-fluid {
+    align-items: flex-end !important;
 }
 
 .navbar-collapse {
@@ -54,29 +90,61 @@ ul.navbar-nav {
     font-weight: bold;
 }
 
-.row {
-    gap: 200px;
+@media (max-width: 667px) {
+    .navbar-collapse {
+        display: block !important;
+        width: 100% !important;
+    }
 }
 
-.content {
-    transform: translate(-50%, -20%);
-    -webkit-transform: translate(-50%, -20%);
-    -moz-transform: translate(-50%, -20%);
-    -ms-transform: translate(-50%, -20%);
-    -o-transform: translate(-50%, -20%);
+.offcanvas {
+    background-color: #f2f2f224 !important;
 }
 
-.explore div {
-    font-weight: 200;
-    width: 250px;
+main {
+    margin-top: 100px !important;
+}
+
+
+@media (max-width: 991px) {
+    main {
+        margin-top: 0 !important;
+        flex-direction: column !important;
+    }
+
+    main .space {
+        width: 100% !important;
+    }
+}
+
+@media (max-width: 667px) {
+    main .space .span-space {
+        font-size: 90px !important;
+    }
+}
+
+.explore {
+    width: 250px !important;
     height: 250px;
-    padding: 65px;
-    background: #f2f2f2;
+    cursor: pointer;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+
+.explore:hover {
+    box-shadow: 0px 0px 16px 10px white;
+}
+
+.explore div {
+    font-weight: 200;
 }
 
 .letter:not(.letter span) {
@@ -90,4 +158,88 @@ ul.navbar-nav {
 .letter-1 {
     font-size: 13px;
     line-height: 2;
+}
+
+/* Destination page */
+
+.active {
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+}
+
+section.space {
+    width: 40%;
+}
+
+@media (max-width: 991px) {
+    main section {
+        width: 100% !important;
+        text-align: center !important;
+    }
+
+    main img {
+        width: 70% !important;
+    }
+
+    main ul {
+        width: 80% !important;
+        margin: auto !important;
+    }
+
+    main .moon-name {
+        font-size: 4rem !important;
+        margin-top: 15px !important;
+    }
+
+    main .crew-name {
+        font-size: 2rem !important;
+        margin-top: 15px !important;
+    }
+
+    main .info {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+/* styling the crew page  */
+
+.active-1 {
+    background: #ccc !important;
+}
+
+
+@media (max-width: 667px) {
+    main ul {
+        justify-content: center !important;
+    }
+
+    main h3 {
+        margin: auto !important;
+    }
+}
+
+/* styling technology page */
+
+.active-2 {
+    background: #ccc !important;
+    color: black !important;
+}
+
+
+@media (max-width: 991px) {
+    main ul {
+        flex-direction: row !important;
+    }
+
+    main section {
+        justify-content: center !important;
+    }
+
+    main h3 {
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 0 !important;
+        margin-top: 50px !important;
+    }
 }
